istio/httpbin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin
  labels:
    name: httpbin
spec:
  rules:
  - host: httpbin.localtest.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: httpbin
            port: 
              number: 8000
