istio/httpbin/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
 name: httpbin
spec:
 hosts:
   - httpbin
 location: MESH_EXTERNAL
 ports:
   - number: 80
     name: http
     protocol: HTTP
#  resolution: DNS
 resolution: STATIC # 静态
 endpoints:
   - address: 10.42.0.30
#  addresses:
#    - 110.242.68.3
